# tRP

./: LICENSE  README.md  pyproject.toml  setup.yaml
Data/: Formation.csv  Table.S1.csv  Table.S1_source.csv  Table.S2.csv  test.csv  test_form_source.csv  test_source.csv  train_form_source.csv  train_source.csv
Figure/: Fig_3.tif  Fig_5.tif
Figure/ETC/: Figure.4.py
Figure/TIF/: Fig_1.tif  Fig_2.tif  Fig_4.tif
SHAP/: Table.S1_train.csv  run.py
SHAP/result/: result.csv
SHAP/src/: config_shap.yml  run.py
SISSO/result/: criterion_chalcogen_1.csv  criterion_chalcogen_2.csv  criterion_chalcogen_3.csv  criterion_halogen_1.csv  descriptors.csv
SISSO/result/1_2/: descriptors.csv
SISSO/result/1_4/: descriptors.csv  descriptors_value.csv
SISSO/result/2/: criterion_chalcogen_1.csv  criterion_halogen_1.csv  descriptors.csv
SISSO/result/2_1/: accuracy.csv  descriptors_value.csv
SISSO/result/2_2/: accuracy.csv  criterion_chalcogen_1.csv  criterion_halogen_1.csv  descriptors.csv
SISSO/result/Tree_0/: 0_tree.dot  10_tree.dot  11_tree.dot  12_tree.dot  13_tree.dot  14_tree.dot  15_tree.dot  16_tree.dot  17_tree.dot  18_tree.dot  19_tree.dot  1_tree.dot  20_tree.dot  21_tree.dot  22_tree.dot  23_tree.dot  24_tree.dot  25_tree.dot  26_tree.dot  27_tree.dot  28_tree.dot  29_tree.dot  2_tree.dot  30_tree.dot  31_tree.dot  32_tree.dot  (+74 more)
SISSO/run/: train.csv
SISSO/src/: config_criterion.yml  config_extraction.yml  config_prediction.yml  config_revision_criterion_1_4.yml  config_revision_extraction_1_4.yml  config_revision_extraction_2_1.yml  prediction.py  run.py
(+276 files in other folders)
