[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tRP"
version = "1.0"
description = "Ruddlesden-Popper Tolerance Factor Project"
authors = [
    { name = "Hyo Gyeong Shin", email = "hyogyeong@postech.ac.kr" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License"
]

dependencies = [
    "scikit-learn",
    "contextlib2",
    "ipykernel",
    "seaborn",
    "numpy==1.18.5",
    "shap==0.41.0",
    "ase"
]

[tool.setuptools.packages.find]
include = ["tRP"]

[project.scripts]
tRP-run = "SISSO.src.run:main"